[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "servo-reader"
version = "0.3.0"
description = "Ultra-lightweight terminal web reader: render any site as clean markdown using the Servo engine."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Parker Brown" }]
keywords = ["servo", "terminal", "reader", "markdown", "browser", "tui", "lynx"]
dependencies = [
    "servo-agent",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5"]

[project.scripts]
sr = "servo_reader.__main__:main"
servo-reader = "servo_reader.__main__:main"
sr-engine = "servo_reader.daemon:main"

[tool.uv.sources]
# Public sibling project — pulled from GitHub so `servo-reader` builds standalone
# (a fresh `git clone` + `uv sync` works without a local checkout). For local
# co-development against a sibling checkout, override with:
#   servo-agent = { path = "../servo-agent", editable = true }
servo-agent = { git = "https://github.com/parker-brown-family/servo-agent.git", branch = "main" }

[tool.hatch.build.targets.wheel]
packages = ["src/servo_reader"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
